--- a/Proyecto/video.html
+++ b/Proyecto/video.html
@@ -14,7 +14,7 @@
   <header>
     <nav id="navbar">
       <div class="container">
-        <h1 class="logo" title="FIME Educación Técnica"><a href="/index.html">
+        <h1 class="logo" title="DH"> <a href="DoctorsHospital.html">DOCTORS HOSPITAL</a></h1>
           DOCTORS HOSPITAL</a></h1>
         <ul>
           <li><a  href="index.html">Inicio</a><li>
