--- a/Proyecto/about.html
+++ b/Proyecto/about.html
@@ -7,7 +7,7 @@
     <meta name="robots" content="NOINDEX, NOFOLLOW">
     <meta name="author" content="Pedro Zuñiga">
     <link rel="stylesheet" href="styles.css">
-    <title>Anteproyecto</title>
+    <title>proyecto</title>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="./css/styles.css">
 <body>
@@ -28,6 +28,8 @@
       <div class="info-left">
         <h1 class="l-heading"><span class="text-primary">Doctors Meical
           Center.</h1>
+          <br>
+          <br>
   <p> Doctors Medical Center, lo invita a conocer sus consultorios, los cuales
    están equipados con la tecnología más avanzada. Nuestro Hospital privado se
     distingue por contar con el mejor cuerpo médico y atención de excelencia,
