--- a/Proyecto/about.html
+++ b/Proyecto/about.html
@@ -26,6 +26,7 @@
     <section id="about-info" class="bg-light py-3">
       <div class="container">
       <div class="info-left">
+        <left>
         <h1 class="l-heading"><span class="text-primary">Doctors Meical
           Center.</h1>
           <br>
