--- a/Proyecto/index.html
+++ b/Proyecto/index.html
@@ -34,7 +34,8 @@
         <br>
         <br>
  <span class="text-primary">UN COMPROMISO CON TU SALUD
-
+   </center>
+        </span>
 
    </div>
    </div>
