--- a/Proyecto/about.html
+++ b/Proyecto/about.html
@@ -26,7 +26,7 @@
     <section id="about-info" class="bg-light py-3">
       <div class="container">
       <div class="info-left">
-        <h1 class="l-heading"><span class="text-primary">Doctors Meical
+        <h1 class="l-heading"><span class="text-primary">Doctors Medical
           Center.</h1>
   <p> Doctors Medical Center, lo invita a conocer sus consultorios, los cuales
    están equipados con la tecnología más avanzada. Nuestro Hospital privado se
